fixed nav bar overflow margins

--- a/css/style.css
+++ b/css/style.css
@@ -130,10 +130,9 @@ a.umbutton, a.googlebutton, a.researchbutton{
   background-color: black; /*#4FC3F7;*/
   align-items: top;
   justify-content: center;
-  width: 100%;
+  width: 1fr;
   padding:20px;
   margin:0px;
-
 }
 
 a{
